Edit all base and configuration files to match the script with Elementary OS system, add ppa extended, sysvinit script was rebuild to install nvidia primus card driver

--- a/etc/arepalinux.conf
+++ b/etc/arepalinux.conf
@@ -54,42 +54,43 @@ XFS_FLAGS="rw,noatime,relatime,attr2,nobarrier,logbufs=8,largeio,inode64"
 USE_DHCP="yes"
 
 # Enable IPv4 Forwarding (only virtual servers and proxies)
-ENABLE_FORWARDING="yes"
+ENABLE_FORWARDING="no"
 
 # don't install dns cache
-DISABLE_DNSCACHE="no"
+DISABLE_DNSCACHE="yes"
 
 # disable IPV6
 DISABLE_IPV6="no"
 
 ### apt options
 
-# Debian Suite
-SUITE='jessie'
+#Suite: Elementary OS is based on Ubuntu
+SUITE='trusty'
 
 # enable Security updates
 APT_SECURITY="yes"
 
 # enable updates
-APT_UPDATES="no"
+APT_UPDATES="yes"
 
 # enable support and priorize Debian Backports
 ENABLE_BACKPORTS="yes"
 
-# enable Devuan repository
-ENABLE_DEVUAN="yes"
+# enable PPA repository
+ENABLE_PPA="yes"
 
 # enable remote repository (http.debian.net)
 ENABLE_REMOTE="yes"
-REMOTE_REPO="http.debian.net"
+REMOTE_REPO="archive.ubuntu.com"
 
 # REPOSITORY TYPE (local, network)
-REPO_TYPE=local
+REPO_TYPE='network'
 
 # repo URL: file or HREF (ej: http.debian.net)
 #REPO_URL="172.18.1.138/mirrors"
-REPO_URL="/opt/repo/mirrors"
-REPO_SECTIONS="main contrib non-free"
+#REPO_URL="/opt/repo/mirrors"
+REPO_URL="archive.ubuntu.com"
+REPO_SECTIONS="main multiverse restricted universe"
 
 # keyring lists
-KEYRINGS="debian-keyring debian-archive-keyring debian-ports-archive-keyring"
+KEYRINGS="debian-keyring ubuntu-keyring debian-archive-keyring debian-ports-archive-keyring"
