Edit all rest of files

--- a/etc/arepalinux.conf
+++ b/etc/arepalinux.conf
@@ -76,6 +76,27 @@ APT_UPDATES="yes"
 # enable support and priorize Debian Backports
 ENABLE_BACKPORTS="yes"
 
+#Enable Docker 
+ENABLE_DOCKER="yes"
+#Install Aplications 
+#Install multimedia codecs
+INSTALL_MULTIMEDIA="yes"
+#Install compression tools
+INSTALL_COMPRESSION="yes"
+#Install java 
+INSTALL_JAVA="yes"
+#Install libreoffice suite
+INSTALL_LIBREOFFICE="yes"
+#Install browsers
+INSTALL_BROWSERS="yes"
+#Install torrent client
+INSTALL_TORRENTS="yes"
+#Install graphics program
+INSTALL_GRAPHICS="yes"
+#Install chat tools (skype pidgin)
+INSTALL_CHATS="yes"
+
+
 # enable PPA repository
 ENABLE_PPA="yes"
 
