Fix some issues with repos and packages

--- a/etc/arepalinux.conf
+++ b/etc/arepalinux.conf
@@ -114,4 +114,4 @@ REPO_URL="archive.ubuntu.com"
 REPO_SECTIONS="main multiverse restricted universe"
 
 # keyring lists
-KEYRINGS="debian-keyring ubuntu-keyring debian-archive-keyring debian-ports-archive-keyring"
+KEYRINGS="ubuntu-keyring"
